# Reversi

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  InPutTest.cpp  InPutTest.h  Player.cpp  Player.h  Point.cpp  Point.h  README.md  RegularLogic.cpp  RegularLogic.h  main.cpp  test.txt
